First trial mountain car continuous fail

--- a/code_implementation/cartpole.ipynb
+++ b/code_implementation/cartpole.ipynb
@@ -16,7 +16,8 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from lib import train_linear_q, evaluate_policy, CartpoleQNetwork, DQN_Trainer\n",
+    "from train.dqn import CartpoleQNetwork, DQN_Trainer, train_linear_q\n",
+    "from train.lib import evaluate_policy\n",
     "import gymnasium as gym\n",
     "\n",
     "print(\"===== DQN Training =====\")\n",
@@ -142,8 +143,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# ---------------------------\n",
     "# 선형 Q-learning을 이용한 학습 및 평가\n",
     "# ---------------------------\n",
@@ -163,13 +162,6 @@
     "eval_rewards_linear = evaluate_policy(env, linear_model, n_episodes=3, render=True)\n",
     "print(\"Linear Q-learning Evaluation Rewards:\", eval_rewards_linear)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
