--- a/code_implementation/mountain_continuous.ipynb
+++ b/code_implementation/mountain_continuous.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "import gymnasium as gym\n",
-    "from train.actor_critic import REINFORCEBatch, MountainContinuousActor\n",
+    "from train.actor_critic import REINFORCEBatch, MountainContinuousActor, REINFORCEBatchRenderer\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -1451,20 +1451,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gwanwoo/Developer/reinforcement_study/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
-    "torch.save(trainer.actor.state_dict(), \"mountaincar_20250223/500.pth\")"
+    "# torch.save(trainer.actor.state_dict(), \"mountaincar_20250223/500.pth\")\n",
+    "import gymnasium as gym\n",
+    "from train.actor_critic import REINFORCEBatch, MountainContinuousActor, REINFORCEBatchRenderer\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-24 03:10:18.922 python[41477:3133649] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-02-24 03:10:18.922 python[41477:3133649] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    }
+   ],
+   "source": [
+    "actor = MountainContinuousActor(hidden_dim=16)\n",
+    "actor.load_state_dict(torch.load(\"mountaincar_20250223/500.pth\"))\n",
+    "env = gym.make(\"MountainCarContinuous-v0\", render_mode=\"rgb_array\")\n",
+    "trainer = REINFORCEBatch(env=env, actor=actor, critic=None)\n",
+    "renderer = REINFORCEBatchRenderer(env, trainer)\n",
+    "frames_per_episode = renderer.rendering(max_step=1000)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "video is saved in mountaincar_20250223/videos/500_0.mp4\n",
+      "video is saved in mountaincar_20250223/videos/500_1.mp4\n",
+      "video is saved in mountaincar_20250223/videos/500_2.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_dir = \"mountaincar_20250223/videos\"\n",
+    "for i, frames in enumerate(frames_per_episode):\n",
+    "    save_name=f\"500_{i}\"\n",
+    "    renderer.save_as_video(frames, save_dir, save_name)"
+   ]
   },
   {
    "cell_type": "code",
