--- a/code_implementation/mountain_continuous.ipynb
+++ b/code_implementation/mountain_continuous.ipynb
@@ -71,6 +71,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:03<00:07,  3.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 0: total_reward: -80.407, actor_loss: -9361.122, num_episodes: 999.000\n",
+      "1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [00:06<00:03,  3.45s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 1: total_reward: -87.121, actor_loss: -10032.170, num_episodes: 999.000\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:10<00:00,  3.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 2: total_reward: -81.494, actor_loss: -9399.846, num_episodes: 999.000\n",
+      "3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-80.40742797506395, -87.12079656251811, -81.49378704906141]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# REINFORCEBatch\n",
+    "actor = MountainContinuousActor(hidden_dim=16)\n",
+    "trainer = REINFORCEBatch(env=env, actor=actor, critic=None)\n",
+    "trainer.train(beta=None, logging_per_episodes=1, save_per_episodes=1, num_episodes=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
