--- a/code_implementation/mountain_continuous.ipynb
+++ b/code_implementation/mountain_continuous.ipynb
@@ -1545,7 +1545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mlic/intern/gwanwoo/reinforcement_study/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/gwanwoo/Developer/reinforcement_study/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -1555,7 +1555,8 @@
     "# torch.save(trainer.actor.state_dict(), \"mountaincar_20250223/500.pth\")\n",
     "import gymnasium as gym\n",
     "from train.actor_critic import REINFORCEBatch, MountainContinuousActor, REINFORCEBatchRenderer\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from train.lib import device\n"
    ]
   },
   {
@@ -1934,24 +1935,43 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-24 16:00:34.218 python[25532:3901160] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-02-24 16:00:34.218 python[25532:3901160] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
      ]
     }
    ],
    "source": [
     "actor = MountainContinuousActor(hidden_dim=128)\n",
-    "actor.load_state_dict(torch.load(\"MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/500.pth\"))\n",
+    "actor.load_state_dict(torch.load(\"MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/500.pth\", map_location=device))\n",
     "env = gym.make(\"MountainCarContinuous-v0\", render_mode=\"rgb_array\")\n",
     "trainer = REINFORCEBatch(env=env, actor=actor, critic=None)\n",
     "renderer = REINFORCEBatchRenderer(env, trainer)\n",
     "frames_per_episode = renderer.rendering(max_step=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/videos/500_0.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/videos/500_1.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/videos/500_2.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_dir = \"MountainCarContinuous-v0_REINFORCEBatch_20250224-1521/videos\"\n",
+    "for i, frames in enumerate(frames_per_episode):\n",
+    "    save_name=f\"500_{i}\"\n",
+    "    renderer.save_as_video(frames, save_dir, save_name)"
    ]
   },
   {
