--- a/code_implementation/mountain_continuous.ipynb
+++ b/code_implementation/mountain_continuous.ipynb
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gwanwoo/Developer/reinforcement_study/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# torch.save(trainer.actor.state_dict(), \"mountaincar_20250223/500.pth\")\n",
+    "import gymnasium as gym\n",
+    "from train.actor_critic import REINFORCEBatch, MountainContinuousActor, REINFORCEBatchRenderer, MountainContinuousActorV2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from train.lib import device\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2278,12 +2301,26 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "# torch.save(trainer.actor.state_dict(), \"mountaincar_20250223/500.pth\")\n",
-    "import gymnasium as gym\n",
-    "from train.actor_critic import REINFORCEBatch, MountainContinuousActor, REINFORCEBatchRenderer, MountainContinuousActorV2\n",
-    "import matplotlib.pyplot as plt\n",
-    "from train.lib import device\n",
+    "env = gym.make(\"MountainCarContinuous-v0\")\n",
+    "# REINFORCEBatch\n",
+    "actor = MountainContinuousActorV2(hidden_dim=64)\n",
+    "trainer = REINFORCEBatch(env=env, actor=actor, critic=None)\n",
+    "episode_rewards = trainer.train(beta=None, logging_per_episodes=25, save_per_episodes=25, alpha_lr_per_epidsode=100)\n",
+    "\n",
+    "plt.figure(figsize=(8,4))\n",
+    "plt.plot(episode_rewards)\n",
+    "plt.xlabel(\"Episode\")\n",
+    "plt.ylabel(\"Total Reward\")\n",
+    "plt.title(\"DQN Training Rewards\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "env = gym.make(\"MountainCarContinuous-v0\")\n",
     "# REINFORCEBatch\n",
@@ -2298,6 +2335,49 @@
     "plt.title(\"DQN Training Rewards\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-24 16:50:25.529 python[66430:4062976] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-02-24 16:50:25.529 python[66430:4062976] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1635/videos/500_0.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1635/videos/500_1.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEBatch_20250224-1635/videos/500_2.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "actor = MountainContinuousActorV2(hidden_dim=64)\n",
+    "actor.load_state_dict(torch.load(\"MountainCarContinuous-v0_REINFORCEBatch_20250224-1635/500.pth\", map_location=device))\n",
+    "env = gym.make(\"MountainCarContinuous-v0\", render_mode=\"rgb_array\")\n",
+    "trainer = REINFORCEBatch(env=env, actor=actor, critic=None)\n",
+    "renderer = REINFORCEBatchRenderer(env, trainer)\n",
+    "frames_per_episode = renderer.rendering(max_step=1000)\n",
+    "save_dir = \"MountainCarContinuous-v0_REINFORCEBatch_20250224-1635/videos\"\n",
+    "for i, frames in enumerate(frames_per_episode):\n",
+    "    save_name=f\"500_{i}\"\n",
+    "    renderer.save_as_video(frames, save_dir, save_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2316,7 +2396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
