--- a/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
+++ b/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "from train.actor_critic import REINFORCEwithBaseline, MountainContinuousActorV2, MountainContinuousCritic, REINFORCEwithBaselineRenderer\n",
+    "from train.actor_critic import REINFORCEwithBaseline, MountainContinuousActorV2, MountainContinuousCritic\n",
     "from train.lib import device\n",
     "\n",
     "import gymnasium as gym\n",
@@ -551,15 +551,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'dir_p' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m frames_list \u001b[38;5;241m=\u001b[39m renderer\u001b[38;5;241m.\u001b[39mrendering(max_step\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, frames \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(frames_list):\n\u001b[0;32m---> 16\u001b[0m     \u001b[43mrenderer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_as_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_episodes\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Developer/reinforcement_study/code_implementation/train/actor_critic.py:537\u001b[0m, in \u001b[0;36mREINFORCEwithBaselineRenderer.save_as_video\u001b[0;34m(self, frames, name, dir)\u001b[0m\n\u001b[1;32m    534\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    535\u001b[0m     dir_p \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;28mdir\u001b[39m)\n\u001b[0;32m--> 537\u001b[0m \u001b[43mdir_p\u001b[49m\u001b[38;5;241m.\u001b[39mmkdir(exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    538\u001b[0m path \u001b[38;5;241m=\u001b[39m dir_p \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.mp4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    540\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(frames) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'dir_p' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "video is saved in MountainCarContinuous-v0_REINFORCEwithBaseline_20250226-1517/0_0.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEwithBaseline_20250226-1517/0_1.mp4\n",
+      "video is saved in MountainCarContinuous-v0_REINFORCEwithBaseline_20250226-1517/0_2.mp4\n"
      ]
     },
     {
@@ -576,29 +573,16 @@
    ],
    "source": [
     "env = gym.make(\"MountainCarContinuous-v0\", render_mode=\"rgb_array\")\n",
-    "# REINFORCEBatch\n",
-    "actor = MountainContinuousActorV2(hidden_dim=64).to(device)\n",
-    "critic = MountainContinuousCritic(hidden_dim=64).to(device)\n",
-    "num_episodes = 50\n",
+    "actor = MountainContinuousActorV2(hidden_dim=64)\n",
+    "critic = MountainContinuousCritic(hidden_dim=64)\n",
     "model_dir = \"MountainCarContinuous-v0_REINFORCEwithBaseline_20250226-1517\"\n",
-    "actor.load_state_dict(torch.load(f\"{model_dir}/actor_{num_episodes}.pth\", map_location=device))\n",
-    "critic.load_state_dict(torch.load(f\"{model_dir}/critic_{num_episodes}.pth\", map_location=device))\n",
-    "trainer = REINFORCEwithBaseline(env=env, dir=model_dir, actor=actor, critic=critic)\n",
     "\n",
-    "renderer = REINFORCEwithBaselineRenderer(env=env, model=trainer)\n",
-    "frames_list = renderer.rendering(max_step=1000)\n",
-    "\n",
-    "\n",
-    "for i, frames in enumerate(frames_list):\n",
-    "    renderer.save_as_video(frames, name=num_episodes)"
+    "trainer = REINFORCEwithBaseline(env=env, actor=actor, critic=critic, dir=model_dir)\n",
+    "name = \"0\"\n",
+    "trainer.load_model(name)\n",
+    "frames_list = trainer.render(num_render=3, max_step=200,wait_time=1)\n",
+    "trainer.save_as_video(frames_list=frames_list, name=name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
