Add half cheetah testing code

--- a/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
+++ b/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mlic/intern/gwanwoo/reinforcement_study/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/gwanwoo/Developer/reinforcement_study/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x150513980b90>"
+       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x1077af340>"
       ]
      },
      "execution_count": 1,
