Train 2000 episodes & model size down

--- a/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
+++ b/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,10 +16,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x150513980b90>"
+       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x145792157a50>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,6 +583,181 @@
     "frames_list = trainer.render(num_render=3, max_step=200,wait_time=1)\n",
     "trainer.save_as_video(frames_list=frames_list, name=name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/2000 [00:05<3:00:06,  5.41s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 0: total_reward: -91.691, actor_object: -11731330.000, critic_loss: 76.006, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 51/2000 [04:25<2:48:42,  5.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 50: total_reward: -101.517, actor_object: -12106124.000, critic_loss: 75.987, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 101/2000 [08:44<2:44:06,  5.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100: total_reward: -98.929, actor_object: -9485178.000, critic_loss: 48.651, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|▊         | 151/2000 [13:03<2:40:03,  5.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 150: total_reward: -101.305, actor_object: -4861075.000, critic_loss: 14.878, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 201/2000 [17:22<2:35:27,  5.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 200: total_reward: -107.982, actor_object: -1839358.000, critic_loss: 7.405, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 13%|█▎        | 251/2000 [21:41<2:31:13,  5.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 250: total_reward: -94.857, actor_object: -1573.039, critic_loss: 5.306, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▌        | 301/2000 [26:00<2:27:19,  5.20s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 300: total_reward: -92.772, actor_object: 102241.078, critic_loss: 2.966, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|█▊        | 351/2000 [30:44<2:22:28,  5.18s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 350: total_reward: -92.751, actor_object: 27215.305, critic_loss: 4.071, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 401/2000 [35:02<2:17:40,  5.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 400: total_reward: -95.591, actor_object: -472753.281, critic_loss: 4.474, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 23%|██▎       | 451/2000 [39:23<2:13:40,  5.18s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 450: total_reward: -93.323, actor_object: -186171.781, critic_loss: 3.855, num_step: 999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▍       | 498/2000 [43:28<2:12:24,  5.29s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make(\"MountainCarContinuous-v0\")\n",
+    "actor = MountainContinuousActorV2(hidden_dim=32)\n",
+    "critic = MountainContinuousCritic(hidden_dim=32)\n",
+    "trainer = REINFORCEwithBaseline(env=env, actor=actor, critic=critic)\n",
+    "\n",
+    "episode_rewards, (actor_losses, critic_losses) = trainer.train(\n",
+    "    num_episodes=2000,\n",
+    "    logging_per_episodes=50,\n",
+    "    save_per_episodes=50,\n",
+    "    alpha=3e-4,\n",
+    ")\n",
+    "trainer.plot(rewards_list=episode_rewards, actor_losses=actor_losses, critic_losses=critic_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -601,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
