Rerange log std of mountaincar actor

--- a/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
+++ b/code_implementation/mountaincar_continuous_reinforce_baseline.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gwanwoo/Developer/reinforcement_study/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/mlic/intern/gwanwoo/reinforcement_study/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x1107a5b70>"
+       "<torch.autograd.anomaly_mode.set_detect_anomaly at 0x15149bc79f90>"
       ]
      },
      "execution_count": 1,
@@ -649,6 +649,13 @@
     "trainer.load_model(name)\n",
     "frames_list = trainer.render(num_render=3, max_step=200,wait_time=1)\n",
     "trainer.save_as_video(frames_list=frames_list, name=name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# rerange log_std [-20, 2] -> [-2, 0.5]"
    ]
   },
   {
