Probability 4.Expectation presentation version

--- a/seminar/prob2/main.tex
+++ b/seminar/prob2/main.tex
@@ -6,7 +6,6 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 
-
 % \setcounter{MaxMatrixCols}{20}
 
 % (필요한 패키지들)
@@ -25,6 +24,7 @@
 \usepackage{graphicx} % 이미지 삽입을 위한 패키지
 \usepackage{amsmath}   % 수식 사용
 \usepackage{hyperref}  % 하이퍼링크 추가
+\usepackage{cleveref}
 \usepackage{multicol}  % 여러 열 나누기
 
 
@@ -75,7 +75,7 @@
 \end{frame}
 
 \begin{frame}{Expectation}
-    \begin{example}[Rolling dice]
+    \begin{example}[Bernoulli expectation]
         Let $X \sim \text{Bern}(p)$ and $q = 1-p$.
         \[
             E(X) = 1p +0q = p
@@ -138,7 +138,7 @@
 \end{frame}
 
 \begin{frame}{Expectation}
-    \begin{example}[Geometric expectation]
+    \begin{example}[Geometric expectation] \label{ex:geometric_expectation}
         Let $X \sim \text{Geom}(p)$. By definition,
         \[
             E(X) = \sum^\infty_{k=0} k q ^k p = \frac{q}{p}
@@ -177,12 +177,6 @@
 \end{frame}
 
 \begin{frame}{Expectation}
-    \begin{block}{Note}
-
-    \end{block}
-\end{frame}
-
-\begin{frame}{Expectation}
     Indicator r.v.  $I_A$ or ($I(A)$) for an event $A$ is defined to be $1$ if $A$ occurs and $0$ otherwise. So $I_A \sim \text{Bern}(p)$. 
     \begin{theorem}[Indicator r.v. properties]
         Let $A$ and $B$ be events. Then the following properties hold
@@ -196,7 +190,7 @@
 \end{frame}
 
 \begin{frame}{Expectation}
-    \begin{theorem}[Fundamental bridge between probability and expectation (Skip)]
+    \begin{theorem}[Fundamental bridge between probability and expectation]
         There is a \ti{one-to-one} correspondence between events and indicator r.v.s, and the probability of an event $A$ is the expected value of its indicator r.v. $I_A$: 
         \[
         P(A) = E(I_A)
@@ -205,5 +199,199 @@
 
     Proof. For any event $A$, we have an indicator r.v. $I_A$. This is a one-to-one correspondence since $A$ uniquely determines $I_A$ and vice versa (to get from $I_A$ back to $A$, we can use the fact that $A = \{s \in S: I_A(s) = 1\}$). Since $I_A \sim \text{Bern}(p)$ with $p = P(A)$, we have $E(I_A) = P(A)$
 \end{frame}
+
+\begin{frame}{Expectation}
+    \begin{theorem}[Expectation via survival function] \label{thm:expectation_via_survival_function}
+        Let $X$ be a nonnegative integer-valued r.v. Let $F$ be the $CDF$ of $X$, and $G(x)=1-F(x)=P(X>x)$. The function $G$ is called the \tb{survival function} of $X$. Then
+        \[
+            E(X) = \sum^\infty_{k=0} G(n)
+        \]
+        That is, we can obtain the expectation of $X$ by summing up the survival function (or \ti{tail probability of the distribution})
+    \end{theorem}
+    Proof. We can represent $X$ as a sum of indicator r.v.s.: $X = I_1 + I_2 + \cdots + I_b$, where $I_n = I(X \geq n)$. (ex: if $X=5$, then $I_1, \cdots, I_5 = 1$ and $I_6, \cdots = 0$) Then
+    \[
+        E(X) = \sum^b_{k=1} E(I_k) = \sum^b_{k=1} P(X \geq k ) = \sum^{b-1}_{n=0} P(X > n) = \sum^\infty_{n=0} G(n)
+    \]
+\end{frame}
+
+\begin{frame}{Expectation}
+    \begin{example}[Rolling dice expectation via survival function]
+        Suppose $X$ is the r.v. that represents the number of rolls of a fair die. Then $E(X) = \sum^\infty_{n=0}G(n) = \frac{(6+5+4+3+2+1+0)}{6}$
+    \end{example}
+    \begin{example}[Geometric expectation redux]
+        Let $X \sim \text{Geom}(p)$, and $q = 1-p$. Using the Geometric story, $\{X > n\}$ is the event that the first $n+1$ trials are all failures. So by \cref{thm:expectation_via_survival_function},
+        \[
+            E(X) = \sum^\infty_{n=0} P(X >n) = \sum^\infty_{n=0} q^{n+1}= \frac{q}{1-q} = \frac{q}{p}
+        \]
+    \end{example}
+    Compare procedures with \cref{ex:geometric_expectation}.
+\end{frame}
+
+\begin{frame}{Expectation}
+    \begin{itemize}
+        \item In general, $E(g(X)) \neq g(E(X))$ for arbitrary function $g$. 
+        \item Therefore to find $E(g(X))$, first we have to know the distribution of $g(X)$ and apply the definition of expectation, $E(g(X))$.
+        \item But what if $g(x)$ is difficult to determine? or hard to calculate? 
+        \item Perhaps surprisingly, by $LOTUS$, without having to find the distrubition of $g(X)$, it is possible to find $E(g(X))$.
+    \end{itemize}
+    \begin{theorem}[\tb{Law of the unconscious statistician (LOTUS)}]
+        If $X$ is a discrete r.v. and $g$ is a function from $\mbb{R}$ to $\mbb{R}$, then
+        \[
+            E[g(X)] = \sum_x g(x)P(X = x)
+        \]
+    \end{theorem}
+\end{frame}
+
+\begin{frame}
+    (LOTUS) Let $X$ have support $0, 1, 2, \cdots$ with probabilities $p_0, p_1, p_2, \dots$ so the PMF is $P(X=n)=p_n$. Then $X^3$ has support $0^3, 1^3, 2^3, \dots$ with probabilities $p_0, p_1, P-2, \dots$, So
+    \[
+    \begin{gathered}
+        E(X) = \sum^\infty_{n=0} np_n,\\
+        E(X^3) = \sum^\infty_{n=0} n^3 p_n,
+    \end{gathered}
+    \]
+
+\end{frame}
+
+\begin{frame}{Expectation}
+    LOTUS Proof.(skip)
+    \[
+    \begin{aligned}
+        E(g(X)) &= \sum_s g(X(s))P(\{s\}) \\
+        &= \sum_x \sum_{s:X(s)=x} g(X(s)) P(\{s\})\\
+        &= \sum_x g(x) \sum_{s:X(s)=x} P(\{s\}) \\
+        &= \sum_x g(x) P(X=x)
+    \end{aligned}
+    \]
+\end{frame}
+
+\begin{frame}{Expectation}
+    One important application of LOTUS is for finding the \tb{variance} of a random variable.
+    \begin{definition}[Variance and standard deviation]
+        The \tb{variance} of an r.v. $X$ is
+        \[ Var(X) = E(X-EX)^2\]
+        THe square root of the variance is called the \tb{standard deviation} (SD)
+        \[SD(X) = \sqrt{Var(X)}\]
+    \end{definition}
+\end{frame}
+
+\begin{frame}{Expectation}
+    \begin{theorem}
+        For any r.v. $X$,
+        \[
+            Var(X) = E(X^2) - (EX)^2
+        \]
+    \end{theorem}
+    Proof. Let $\mu = EX$. Then
+    \[
+        E(X-\mu)^2 = E(X^2 - 2\mu X + \mu^2) = E(X^2) - 2\mu EX +\mu^2 = E(X^2) - \mu^2. \qed
+    \]
+\end{frame}
+
+\begin{frame}{Expectation}
+    Variance has the following properties.
+    \begin{itemize}
+        \item $Var(X+c) = Var(X)$ for any constant $c$ (By def. of variance).
+        \item $Var(cX) = c^2 Var(X)$ for any constnat $c$ (By def. of variance).
+        \item If $X$ and $Y$ are independent, then $Var(X+Y) = Var(X) + Var(Y)$ (Proof in chapter 7).
+        \begin{itemize}
+            \item If $X$ and $Y$ are dependent, then equation is not hold.
+            \item For example, if $X$ is always equals $Y$, we have \[
+                Var(X+Y) = Var(2X) = 4Var(X) \neq 2Var(X) = Var(X) + Var(Y)
+            \]
+        \end{itemize}
+        \item $Var(X) \geq 0$, with equality if and only if $P(X=a)=1$ for some constant $a$ (By def. of variance).
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Expectation}
+    \begin{example}[Geometric variance]
+        Let $X \sim \text{Geom}(p)$. We already know $E(X)=\frac{q}{p}$. By LOTUS,
+        \[
+        \begin{gathered}
+            E(X^2) = \sum^\infty_{k=0} k^2 P(X=k)=\sum^\infty_{k=0} k^2 p q^k = \sum^\infty_{k=0} k^2 p q^k = \sum^{\infty}_{k=1} k^2 p q^k \\
+            = pq \frac{1+q}{(1-q)^3} = \frac{q(1+q)}{p^2}
+        \end{gathered}
+        \].
+    \end{example}
+    Use fact that 
+    \[
+        \begin{gathered}
+            \sum^\infty_{k=0} q^k = \frac{1}{1-q}\quad
+            \sum^\infty_{k=1}kq^{k-1} = \frac{1}{(1-q)^2}\\
+            \sum^\infty_{k=1}kq^k = \frac{q}{(1-q)^2}\quad
+            \sum^\infty_{k=1}k^2 q^{k-1} = \frac{1+q}{(1-q)^3}
+        \end{gathered}
+    \]
+\end{frame}
+
+\begin{frame}{Expectation}
+    \begin{example}[Geometric Variance (continuous)]
+        \[
+        Var(X) = E(X^2) - (EX)^2 = \frac{q(1+q)}{p^2} - \frac{q}{p}^2 = \frac{q}{p^2}
+        \].
+    \end{example}
+\end{frame}
+
+
+
+\begin{frame}{Expectation}
+    \begin{example}[Binomial variance]
+        Let $X \sim \text{Bin}(n,p)$ using indicator r.v.s to avoid tedious sums, $X=I_1+I_2+\cdots+I_n$, where $I_j$ is the indicator of the $j$th trial being a success. Each $I_j$ has variance
+        \[
+        Var(I_j) = E(I_j^2) - (E(I_j))^2 = p - p^2 = p(1-p)
+        \]
+        Since the $I_j$ are independent, we can add their variances to get the variance of their sum:
+        \[
+        Var(X) = Var(I_1) + \cdots + Var(I_n) = np(1-p)
+        \]
+    \end{example}
+\end{frame}
+
+\begin{frame}{Expectation}
+    \tb{Poission distribution} is an extremely popular \tb{discrete} distribution for modeling \ti{discrete data}.
+    \begin{itemize}
+        \item Note that $\sum^\infty_{k=0} \frac{\lambda^k}{k!}$ by taylor series.
+    \end{itemize}
+    \begin{definition}[Poission distribution]
+        An r.v. $X$ has the \tb{Poission distribution} with parameter $\lambda$, where
+        $\lambda > 0$, if the PMF of $X$ is
+        \[P(X=k)=\frac{e^{-\lambda}\lambda^k}{k!},\quad k=0,1,2,\dots\]
+        It is denoted by $X \sim \text{Pois}(\lambda)$.
+    \end{definition}
+    Poission distribution is a valid PMF because $\sum^\infty_{k=0} \frac{e^{-\lambda}\lambda^k}{k!} = e^{-\lambda} \sum^\infty_{k=0} \frac{\lambda^k}{k!} = e^{-\lambda}e^{\lambda} = 1$
+\end{frame}
+
+\begin{frame}{Expectation}
+    \begin{example}[Poisson expectation]
+        Let $X \sim \text{Pois}(\lambda)$. We will show that the mean and variance are both equal to $\lambda$. For the mean, we have 
+        \[
+        \begin{aligned}
+            E(X) &= e^{-\lambda} \sum^\infty_{k=0} k \frac{\lambda^k}{k!} \\
+            &= e^{-\lambda} \sum^\infty_{k=1} k\frac{\lambda^k}{k!} \\
+            &= \lambda e^{-\lambda} \sum^\infty_{k=1} \frac{\lambda^{k-1}}{(k-1)!} \\
+            &= \lambda e^{-\lambda} e^{\lambda} = \lambda
+        \end{aligned}
+        \]
+    \end{example}
+\end{frame}
+
+% \begin{frame}
+%     \begin{example}[Poisson variance]
+%         Let $X \sim \text{Pois}(\lambda)$. We will show that the mean and variance are both equal to $\lambda$. For the variance, we have 
+%         \[
+%         \begin{aligned}
+%             E(X^2) &= e^{-\lambda} \sum^\infty_{k=0} k^2 \frac{\lambda^k}{k!} \\
+%             &= e^{-\lambda} \sum^\infty_{k=1} k^2\frac{\lambda^k}{k!} \\
+%             &= \lambda e^{-\lambda} \sum^\infty_{k=1} k\frac{\lambda^{k-1}}{(k-1)!} \\
+%             &= \lambda e^{-\lambda} e^{\lambda} = \lambda
+%         \end{aligned}
+%         \]
+%         Therefore, $Var(X) = E(X^2) - (EX)^2 = \lambda$
+%     \end{example}
+
+% \end{frame}
+
 
 \end{document}
