--- a/seminar/prob4/main.tex
+++ b/seminar/prob4/main.tex
@@ -164,5 +164,85 @@
 
 \end{frame}
 
+\begin{frame}{Continuous Random Variable}
+
+    \begin{definition}[Location-scale transformation]
+        Let $X$ be a random variable and $Y = \sigma X + \mu$, where $\mu$ and $\sigma$ are constants with $\sigma >0$. Then we say that $Y$ has been obtained as a \textit{Location-scale transformation} of $X$. Here $\mu$ controls how the location is changed and $\sigma$ controls how the scale is changed.
+    \end{definition}
+
+    \begin{example}
+        In a location-scale trainsformation, starting with $X\sim \myunif{a}{b}$ and transforming it to $Y = cX + d$ where $c$ and $d$ are constants with $c >0$, $Y$ is a linear function of $X$ and Uniformity is preserved: $Y \sim \myunif{ca+d}{cb+d}$.  But if $Y$ is defined as a \textit{nonlinear} transformation of $X$, then $Y$ will \textit{not} be Uniform in general. For example, for $X \sim Unif(a,b)$ with $0 \leq a <b$, the transformed r.v. $Y=X^2$ has support $(a^2,b^2)$ but is \textit{not} Uniform on that interval.
+    \end{example}
+
+
+
+\end{frame}
+
+\begin{frame}{Continuous Random variable}
+    Let $U \sim \myunif{0}{1}$. Then 
+    \[
+    \begin{gathered}
+        E[U] = \int_0^1 x dx = \frac{1}{2} \\
+        E[U^2] = \int_0^1 x^2 dx = \frac{1}{3} \\
+        Var[U] = E[U^2] - E[U]^2 = \frac{1}{3} - \frac{1}{4} = \frac{1}{12} 
+    \end{gathered}
+    \]
+    
+    With another uniform distribution $U^\prime \sim \myunif{a}{b}$, $U$ has relation $U^\prime = (b-a)U +a$.
+    Then by locaion-scale transformation,
+    \[
+    \begin{gathered}
+        E[U^\prime] = E[(b-a)U+a] = a + (b-a)E[U] = \frac{a+b}{2}\\
+        Var[U^\prime] = Var[(b-a)U+a] = Var[(b-a)U] = \frac{(b-a)^2}{12}
+    \end{gathered}
+    \]
+
+    Via location-scale transformation, it is quite easy to obtain $E[U^\prime]$ and $Var[U^\prime]$.
+
+\end{frame}
+
+\begin{frame}{Continuous Random Variable}
+    The technique of location-scale transformation will work for any family of distributions such that shifting and scaling an r.v. whose distribution in the family produces another r.v. whose distribution is in the family. 
+
+\bigskip
+
+    This technique does not apply to families of \textbf{discrete distributions} (with a fixed support) since, for example, shifting or scaling $X \sim \mybin{n}{p}$ changes the support and produces an r.v. that is no longer Binomial. 
+    \begin{itemize}
+        \item  A Binomial r.v. must be able to take on all integer values between $0$ and some upper bound
+        \item but $X + 4$ can't take on any value in $\{0, 1, 2, 3\}$ and $2X$ can only take even values, so neither of these r.v.s has a Binomial distribution.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Continuous Random Variable}
+    \begin{theorem}[Universality of the Uniform]
+        Let $F$ be a CDF which is a continuous function and strictly increasing on the support of the distribution. This ensures that the inverse function $F^{-1}: (0,1) \mapsto \mathbb{R}$ exist.($F^{-1}$ is sometimes called as the \textit{quantile function}) We than have the following results
+        \begin{itemize}
+            \item Let $U \sim \myunif{0}{1}$ and $X = F^{-1}$. Then $X$ is an r.v. with CDF $F$.
+            \item Let $X$ be an r.v. with CDF $F$. Then $F(X) \sim \myunif{0}{1}$.
+        \end{itemize}
+    \end{theorem}
+
+    \textit{Proof.}
+    \begin{itemize}
+        \item Let $U \sim \myunif{0}{1}$ and $X = F^{-1}$. For all real $x$,
+         \[P(X \leq x) = P(F^{-1}(U)\leq x) = P(U \leq F(x)) = F(x)\]
+        \item Let $X$ have CDF, and find the CDF of $Y = F(X)$. Since $Y$ takes values in $(0,1)$, 
+        \begin{itemize}
+            \item $P(Y\leq y)$ equals $0$ for $y \leq 0$
+            \item $P(Y\leq y)$ equals $1$ for $y \geq 1$
+            \item For $y \in (0,1)$, $P(Y \leq y) = P(F(X) \leq y) = P(X \leq F^{-1}(y)) = F(F^{-1}(y)) = y$
+        \end{itemize}
+        Thus $Y$ has the $\myunif{0}{1}$ CDF.
+    \end{itemize}
+    \textit{Recall}: PDF of uniform distribution $F(x)$ is defined as
+    \[
+        F(x) = \begin{cases}
+            0 \quad \text{if } x\leq a,
+            \\ \frac{x-a}{b-a} \quad \text{if } a < x <b,
+            \\ 1 \quad \text{if } x \geq b,
+        \end{cases}
+    \]
+
+\end{frame}
 
 \end{document}
